# meson-rust

./: build-mingw.sh  lib.rs  main.c  meson.build
.github/workflows/: build.yml
